compiler/tests-spec/testData/psi/linked/constant-literals/boolean-literals/p-1/neg/2.24.kt
/*
 * KOTLIN PSI SPEC TEST (NEGATIVE)
 *
 * SPEC VERSION: 0.1-draft
 * PLACE: constant-literals, boolean-literals -> paragraph 1 -> sentence 2
 * NUMBER: 24
 * DESCRIPTION: The use of Boolean literals as the identifier (without backtick) in the variableDeclarationEntry.
 * NOTE: this test data is generated by FeatureInteractionTestDataGenerator. DO NOT MODIFY CODE MANUALLY!
 */

fun f1() {
    for (true: Any in 0..10) {}

    val x1 = {false: Boolean ->
        println("1")
    }

    val x2 = {true: Boolean, false: true -> }

    var false: Boolean;

    val x3 = fun(true: Boolean) {

    }(false)
}
